# django-modular-startapp

./: .gitignore  README.md  pyproject.toml
django_modular_startapp/: apps.py
django_modular_startapp/management/commands/: modular_startapp.py
